<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_round_only_bottom_grey"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/marca_jump"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logout"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_total_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintWidth_percent="0.7"
            tools:text="@string/total_stock" />

        <TextView
            android:id="@+id/tv_total_checkin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_stock"
            app:layout_constraintStart_toStartOf="@+id/tv_total_stock"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_stock"
            app:layout_constraintWidth_percent="0.7"
            tools:text="@string/total_check" />

        <TextView
            android:id="@+id/tv_total_faltantes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_checkin"
            app:layout_constraintStart_toStartOf="@+id/tv_total_checkin"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_checkin"
            app:layout_constraintWidth_percent="0.7"
            tools:text="@string/total_faltantes"/>

        <TextView
            android:id="@+id/tv_total_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_faltantes"
            app:layout_constraintStart_toStartOf="@+id/tv_total_faltantes"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_faltantes"
            app:layout_constraintWidth_percent="0.7"
            tools:text="@string/total_new" />

        <ImageButton
            android:id="@+id/btn_regresh_stats"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_refresh"
            android:background="@drawable/bg_round_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_total_news"
            app:layout_constraintStart_toStartOf="@+id/tv_total_news"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_news" />

        <ProgressBar
            android:id="@+id/pb_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/blue_one"
            android:progressBackgroundTint="@color/blue_two"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_regresh_stats"
            app:layout_constraintEnd_toEndOf="@+id/btn_regresh_stats"
            app:layout_constraintStart_toStartOf="@+id/btn_regresh_stats"
            app:layout_constraintTop_toTopOf="@+id/btn_regresh_stats" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray"
        android:elevation="10dp"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:text="@string/init_work"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btn_delete_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:elevation="10dp"
        android:padding="20dp"
        android:text="@string/delete_all"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>